// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonGroup /> should render to match snapshot 1`] = `
<DocumentFragment>
  <div
    class="btn__group"
  >
    <button
      class="btn btn__md btn__primary"
    >
      One
    </button>
  </div>
</DocumentFragment>
`;

exports[`<ButtonGroup /> should render to match snapshot and to be vertical group button and 1`] = `
<DocumentFragment>
  <div
    class="btn__group btn__group-vertical"
  >
    <button
      class="btn btn__md btn__primary"
    >
      One
    </button>
  </div>
</DocumentFragment>
`;
